# hap-cpp

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  LICENSE  Makefile  README.md  configure.sh
hap-cpp.xcodeproj/: project.pbxproj
sample/: CMakeLists.txt  main.cpp
src/: AccessoryServer.cpp  AccessoryServer.hpp  CMakeLists.txt  CMakeLists.txt.in  Doxyfile  HomeKitAccessoryProtocol.h  Makefile  main.cpp
src/ble-transport/: BLETransport.cpp  BLETransport.hpp
src/constants/: InvalidSetupCodes.hpp
src/ip-transport/: IPRouter.cpp  IPRouter.hpp  IPTransport.cpp  IPTransport.hpp
src/ip-transport/mDNS/: MulticastDNS.cpp  MulticastDNS.hpp  README.md
src/objects/accessories/: Accessory.cpp  Accessory.hpp
src/objects/characteristics/: Characteristic.cpp  Characteristic.hpp  CharacteristicConstants.hpp
src/objects/services/: Service.cpp  Service.hpp
src/pairing/: AddPairing.cpp  AddPairing.hpp  PairSetup.cpp  PairSetup.hpp  PairVerify.cpp  PairVerify.hpp  Pairing.cpp  Pairing.hpp  PairingOverIP.cpp  PairingOverIP.hpp  RemovePairing.cpp  RemovePairing.hpp
tests/: CMakeLists.txt  CMakeLists.txt.in  main.cpp
tests/ip-transport/: IPTransportTest.cpp
tests/ip-transport/mDNS/: MulticastDNSTest.cpp
